add search drawer

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.furqan.flutter_ecommerce_ui_kit">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="flutter_ecommerce_ui_kit"
+        android:label="ecommerce"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
